# ccc

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
ccc/domain/: Cargo.toml
ccc/domain/src/: ast.rs  ast_test.rs  error.rs  error_test.rs  lib.rs  static_type.rs  value.rs  value_test.rs
ccc/domain/src/interface/: evaluator.rs  parser.rs  type_checker.rs
ccc/infrastructure/: Cargo.toml
ccc/infrastructure/src/: lib.rs
ccc/infrastructure/src/evaluator/: ast_evaluator.rs  ast_evaluator_test.rs  builtin.rs  mod.rs
ccc/infrastructure/src/evaluator/builtin/: builtin_constructor.rs  builtin_helpers.rs  builtin_list.rs  builtin_math.rs  builtin_time.rs  mod.rs
ccc/infrastructure/src/evaluator/builtin/builtin_helpers/: argument.rs  collection.rs  conversion.rs  mod.rs
ccc/infrastructure/src/parser/: grammar.pest  mod.rs  pest_based_parser.rs  pest_based_parser_test.rs
ccc/infrastructure/src/type_checker/: ast_type_checker.rs  ast_type_checker_test.rs  mod.rs
ccc/presentation/: Cargo.toml
ccc/presentation/src/: cli.rs  input_mode.rs  main.rs  show_builtin.rs
ccc/presentation/tests/: cli_test.rs
ccc/usecase/: Cargo.toml
ccc/usecase/src/: calculate_math_expression.rs  evaluate_piped_input.rs  format_error.rs  format_error_test.rs  interactive_repl.rs  lib.rs
docs/: contribute.md  example.md  getting_started.md
docs/spec/: ast.md  interpreter.md  naming_convention.md  system_architecture.md  type_checker.md  type_system.md
