[package]
name = "presentation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ccc"
path = "src/main.rs"

[dependencies]
usecase = { workspace = true }
infrastructure = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
